2007-02-11  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs,
	  MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs,
	  MonoDevelop.SourceEditor.Actions/DefaultEditActions.cs: Allow
	  indenting single lines. Fixes bug #80717.

2007-02-10  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorWidget.cs: Make sure markers
	  are not bigger than the height of a text line.
	* MonoDevelop.SourceEditor.Gui/SourceEditorBuffer.cs,
	  MonoDevelop.SourceEditor.InsightWindow/IndexerInsightDataProvider.cs,
	  MonoDevelop.SourceEditor.Gui.OptionPanels/SyntaxHighlightingPanel.cs,
	  MonoDevelop.SourceEditor.Gui.Dialogs/GotoLineNumberDialog.cs: Fix
	  warnings.
	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs: Removed unneeded
	  code when trying to find the language item for which to show help.
	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Update
	  marker sizes when font size changes.
	* bookmark.png: New bookmark icon.
	* Makefile.am, MonoDevelop.SourceEditor.mdp: Removed obsolete classes.

2007-02-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs: Added some null
	  checks. A file may not always be able to return a parser context.
	* Makefile.am: distcheck fixes
	* MonoDevelop.SourceEditor.mdp: Flush.

2007-01-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.Gui.Dialogs/GotoLineNumberDialog.cs: Track
	  api changes in Document class.

2007-01-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs,
	  MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs,
	  MonoDevelop.SourceEditor.Actions/DefaultEditActions.cs: Implemented
	  IExtensibleTextEditor. Moved most of code completion code to
	  TextEditorExtension.
	* MonoDevelop.SourceEditor.InsightWindow/MethodInsightDataProvider.cs,
	  MonoDevelop.SourceEditor.InsightWindow/IndexerInsightDataProvider.cs: