@@ -1,3 +1,10 @@
+2007-02-13  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* EditorBindings.glade,
+	  MonoDevelop.SourceEditor.Gui.OptionPanels/SyntaxHighlightingPanel.cs,
+	  MonoDevelop.SourceEditor/SourceViewService.cs: Properly get and set
+	  the color mask for language styles. Fixes bug #77101.
+
 2007-02-11  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs,
